fix bug on mobile

--- a/fylo-dark-theme-landing-page-master/style.css
+++ b/fylo-dark-theme-landing-page-master/style.css
@@ -269,6 +269,7 @@ a {
   }
   .productive__leftImg {
     width: 80%;
+    margin-left: 10%;
   }
   .productive__title {
     font-size: 1.5rem;
